Remove mailto from openings page

--- a/group.html
+++ b/group.html
@@ -136,8 +136,9 @@
 				<br><br>
 				<p>ADS Lab is led by <a href="https://www8.cs.umu.se/~elmroth/" target="_blank">Professor Erik
 						Elmroth</a>
-					where I am one of the research leaders. For any inquires, email at <a
-						href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a></p>
+					<!-- where I am one of the research leaders. For any inquires, email at <a
+						href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a></p> -->
+					where I am one of the research leaders. For any inquires, email at <img style="width: 180px; margin-left: -3px;" src="pics/monowar_email.png"/></p>
 				<br><br>
 			</div>
 		</div>
