--- a/openings.html
+++ b/openings.html
@@ -124,7 +124,7 @@
 				skills,
 				sound logic, and demonstrated research record/potential in the above area. If interested in this
 				position,
-				please email me at <a href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a> to discuss
+				please email me at <a>monowar@cs.umu.se</a> to discuss
 				further. In your first email, please provide your C.V. in PDF.<br><br>
 			</div>
 
@@ -144,7 +144,7 @@
 					<li>Read two (2) of our recent publications (from the past 1 years) to make sure that you are
 						interested
 						in what we do.</li>
-					<li>Send me (at <a href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a>) a brief
+					<li>Send me (at <a>monowar@cs.umu.se</a>) a brief
 						summary
 						of your background and a C.V. (PDF or txt files only! Should include your educational
 						background,
