Fix index and research page headers

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +18,6 @@
 	<link rel="stylesheet" type="text/css" href="monowar.css" title="monowar" media="screen,projection" />
 	<title>Monowar Bhuyan | AI Researcher at Umeå University</title>
 	<link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16" />
-
 </head>
 
 <body>
