Add new row to member page

--- a/members.html
+++ b/members.html
@@ -47,9 +47,9 @@
 				<br>
 				<li><a href="https://www.umu.se/en/staff/monowar-bhuyan/" target="_blank">Assistant Professor</a>, Umeå
 					University</li>
-				<li><a href="https://cloudresearch.org/" target="_blank">Senior Member</a>, ADSLab </li>
-				<li>Leading <a href="https://people.cs.umu.se/monowar/group.html" target="_blank">Cyber Analytics and
-						Learning Group</a></li>
+				<li>Senior Member, <a href="https://cloudresearch.org/" target="_blank">ADSLab</a></li>
+				<li>Leading <a href="https://people.cs.umu.se/monowar/group.html" target="_blank">Cyber Systems and
+						Learning </a>Group</li>
 				<li><a href="https://www.umu.se/en/research/our-research/features-and-news/artificial-intelligence/"
 						target="_blank">Member</a>, Umeå AI </li>
 				<br>
@@ -106,9 +106,9 @@
 
 
 		<div class="contents">
-			<br>
-			<h2 style="padding: 10px 0 0 50px; margin-bottom: -25px; font-size: 24px;">Cyber Analytics and Learning
-				Group [ADSlab]</h2>
+			<br><br><br>
+			<h2 style="padding: 10px 0 0 50px; margin-bottom: -25px; font-size: 24px;">Cyber Systems and Learning Group
+				[ADSlab]</h2>
 			<!-- <h3 class="content_separation">Cyber Analytics and Learning Group [ADSlab]</h3> -->
 			<div>
 				Great to have current members and collaborators!
@@ -125,7 +125,7 @@
 							<br>
 							Kshirasagar Sahoo
 						</a>
-						<p class="member-p">Post-doc<br>Urban anomaly detection, SDN, Systems security<br>[2022 -
+						<p class="member-p">Post-doc<br>Anomaly detection, SDN, Systems security<br>[2022 -
 							ongoing]</p>
 					</div>
 
@@ -135,7 +135,7 @@
 							<br>
 							To be recruited
 						</a>
-						<p class="member-p">Post-doc<br>Federated learning, Adversarial learning<br>[2023 - yet to
+						<p class="member-p">Post-doc<br>Secure federated learning, Adversarial attacks<br>[2023 - yet to
 							start]</p>
 					</div>
 					<div class="member-column member-person">
@@ -152,7 +152,7 @@
 							<br>
 							Sourasekhar Banerjee
 						</a>
-						<p class="member-p">Ph.D. Candidate<br>Federated learning, Optimization, Complex data
+						<p class="member-p">Ph.D. Candidate<br>Federated learning, Complex data
 							analysis<br>[Main supervisor, 2020-ongoing]</p>
 					</div>
 
@@ -162,8 +162,8 @@
 							<br>
 							Javad Forough
 						</a>
-						<p class="member-p">Ph.D. Candidate<br>Anomaly detection, Edge-clouds<br>[Co-supervisor with <a
-								href="https://www8.cs.umu.se/~elmroth/" target="_blank">Prof. Erik Elmroth</a>,
+						<p class="member-p">Ph.D. Candidate<br>Anomaly detection, Edge clouds<br>[Co-supervisor with <a
+								href="https://www8.cs.umu.se/~elmroth/" target="_blank">Erik Elmroth</a>,
 							2020-ongoing]</p>
 					</div>
 
@@ -174,8 +174,7 @@
 							Sabine Houy
 						</a>
 						<p class="member-p">Ph.D. Candidate<br>Andriod vulnerabilities, Fuzzing<br>[Co-supervisor with
-							<a href="https://www.umu.se/en/staff/alexandre-bartel/" target="_blank">Prof. Alexandre
-								Bartel</a>, 2021-ongoing]
+							Alexandre Bartel, 2021-ongoing]
 						</p>
 					</div>
 
@@ -195,7 +194,7 @@
 							<br>
 							Obaidullah Zaland
 						</a>
-						<p class="member-p">Ph.D. Candidate<br>Federated learning, Cloud robotics, Robotics
+						<p class="member-p">Ph.D. Candidate<br>Federated learning, Robotic
 							manipulation<br>[Main supervisor, 2023 - ongoing]</p>
 					</div>
 
@@ -205,8 +204,8 @@
 							<br>
 							Pim Kerkhoven
 						</a>
-						<p class="member-p">Ph.D. Candidate<br>Responsible ML<br>[Main supervisor & <a
-								href="https://www.umu.se/en/staff/virginia-dignum/" target="_blank">Prof. Virginia
+						<p class="member-p">Ph.D. Candidate<br>Responsible machine learning, <br>[Main supervisor & <a
+								href="https://www.umu.se/en/staff/virginia-dignum/" target="_blank">Virginia
 								Dignum</a> as Co-supervisor, 2023 - ongoing]</p>
 					</div>
 
@@ -216,7 +215,7 @@
 							<br>
 							Zhou Zhou
 						</a>
-						<p class="member-p">Ph.D. Candidate<br>Machine learning, Serverless edge intelligence<br>[Main
+						<p class="member-p">Ph.D. Candidate<br>Machine learning, Serverless edge AI<br>[Main
 							supervisor, 2023 - yet to start]</p>
 					</div>
 
@@ -229,21 +228,44 @@
 						<p class="member-p">Ph.D. Candidate<br>Serverless computing, Systems security<br>[Co-supervisor,
 							enrolled in University of Calcutta, India, 2023 - ongoing]</p>
 					</div>
+
+					<!-- Extra row -->
+					<div class="member-column member-person">
+						<a href="#" onclick="return false;">
+							<img src="pics/new1.png" alt="Person 1">
+							<br>
+							Person 1
+						</a>
+						<p class="member-p">Ph.D. Candidate<br>xxx<br>xxxx</p>
+					</div>
+
+					<div class="member-column member-person">
+					</div>
+					<div class="member-column member-person">
+					</div>
+					<div class="member-column member-person">
+					</div>
+
 				</div>
+
+
 
 				<h3>Ongoing MS thesis</h3>
 				<br>
 				<ul>
-					<li>Mimmi Edholm, MS in Computing Science and Engineering</li>
-					<li>Albert Gustavsson, MS in Computing Science and Engineering</li>
-					<li>Oskar Linden, MS in Computing Science and Engineering</li>
+					<li>Sajjad Haydar, MS in Artificial Intelligence, Autumn 2023 and Spring 2024 (AI-based Blind Image
+						and Video Quality Estimator), Department of Computing Science, Umeå University, Sweden</li>
 				</ul>
 				<br>
 
-				<h3>Interns</h3>
+				<h3>Ongoing Interns</h3>
 				<br>
 				<ul>
-					<li>Nil</li>
+					<li>Buchammagari Avinash Reddy, B.Tech. in Computer Science and Engineering final year student at
+						IIIT Nayaraipur, Raipur, India. [Period: January 2023 - present]</li>
+					<li>Devvjit Bhuyan, B.Tech. in Electronics and Communication Engineering final year
+						student at Tezpur University (a Central University), India. [Period: October 2022
+						- present]</li>
 				</ul>
 			</div>
 
@@ -261,6 +283,7 @@
 				<br>
 				<ul>
 					<li>University of Malakand, Pakistan, 2021</li>
+					<br><br>
 				</ul>
 			</div>
 		</div>
